LPS-155716 search-experiences-web: Fix overlapping text in autocomplete dropdown

--- a/modules/dxp/apps/search-experiences/search-experiences-web/src/main/resources/META-INF/resources/sxp_blueprint_admin/css/_field_row_dropdown.scss
+++ b/modules/dxp/apps/search-experiences/search-experiences-web/src/main/resources/META-INF/resources/sxp_blueprint_admin/css/_field_row_dropdown.scss
@@ -14,9 +14,13 @@
 	.type {
 		color: $mainLighten52;
 		font-size: 12px;
+		max-width: 56px;
+		overflow: hidden;
 		position: absolute;
 		right: 16px;
+		text-overflow: ellipsis;
 		top: 50%;
 		transform: translateY(-50%);
+		white-space: nowrap;
 	}
 }
